ban can be use on offline player. Trying a another way to launch processus.