@@ -60,14 +60,17 @@ public class UnixTerminalCommand extends TerminalCommand {
 	@Override
 	public void execute(CommandSender sender) {
 		try {
-			ProcessBuilder pb;
+			/*
+			 * ProcessBuilder pb; if (args != null) pb = new
+			 * ProcessBuilder(execution, args); else pb = new
+			 * ProcessBuilder(execution); pb.redirectErrorStream(true);
+			 * pb.directory(workingDir); Process p = pb.start();
+			 */
+			Process p;
 			if (args != null)
-				pb = new ProcessBuilder(execution, args);
+				p = Runtime.getRuntime().exec(new String[] { execution, args });
 			else
-				pb = new ProcessBuilder(execution);
-			pb.redirectErrorStream(true);
-			pb.directory(workingDir);
-			Process p = pb.start();
+				p = Runtime.getRuntime().exec(new String[] { execution });
 			BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream()));
 			String line = null;
 			while ((line = in.readLine()) != null) {
