@@ -61,14 +61,18 @@ public class WindowsTerminalCommand extends TerminalCommand {
 	@Override
 	public void execute(CommandSender sender) {
 		try {
-			ProcessBuilder pb;
+			/*
+			 * ProcessBuilder pb; if (args != null) pb = new
+			 * ProcessBuilder("cmd.exe", "/C", execution, args); else pb = new
+			 * ProcessBuilder("cmd.exe", "/C", execution);
+			 * pb.redirectErrorStream(true); pb.directory(workingDir); Process p
+			 * = pb.start();
+			 */
+			Process p;
 			if (args != null)
-				pb = new ProcessBuilder("cmd.exe", "/C", execution, args);
+				p = Runtime.getRuntime().exec(new String[] { "cmd.exe", "/C", execution, args });
 			else
-				pb = new ProcessBuilder("cmd.exe", "/C", execution);
-			pb.redirectErrorStream(true);
-			pb.directory(workingDir);
-			Process p = pb.start();
+				p = Runtime.getRuntime().exec(new String[] { "cmd.exe", "/C", execution });
 			BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream()));
 			String line = null;
 			while ((line = in.readLine()) != null) {
